Fixed CSS Align right?
Right?

--- a/src/components/ComoFunciona/ComoFunciona.css
+++ b/src/components/ComoFunciona/ComoFunciona.css
@@ -58,7 +58,6 @@
 
 
 .heroContent {
-overflow: auto;
 width: auto;
 height: auto;
 float: right;
@@ -76,7 +75,6 @@ float: right;
   @media only screen and (min-width: 1367px) {
     margin: 0 auto;
     max-width: calc(1052px + 36px + 36px);
-    width: 100%;
     padding: 0 36px 0 36px;
   }
 }
